--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ local.properties
 ### Intellij+iml ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+.idea
 
 # User-specific stuff:
 .idea/**/workspace.xml
