--- a/.github/workflows/commit.yaml
+++ b/.github/workflows/commit.yaml
@@ -33,31 +33,31 @@ jobs:
           sonar-host: https://sonarcloud.io
           service-account-key: ${{ secrets.SECRET_AUTH }}
 
-#  release:
-#    if: github.ref == 'refs/heads/master'
-#    runs-on: ubuntu-latest
-#    needs:
-#      - test
-#    steps:
-#      - uses: actions/checkout@v2
-#        with:
-#          fetch-depth: 0
-#
-#      - uses: actions/setup-java@v2
-#        with:
-#          distribution: temurin
-#          java-version: 8
-#          cache: maven
-#
-#      - name: Create release
-#        uses: extenda/actions/conventional-release@v0
-#        id: release
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#
-#      - name: Build release
-#        uses: extenda/actions/maven@v0
-#        with:
-#          args: deploy -DskipTests
-#          version: ${{ steps.release.outputs.version }}
-#          service-account-key: ${{ secrets.SECRET_AUTH }}
+  release:
+    if: github.ref == 'refs/heads/master'
+    runs-on: ubuntu-latest
+    needs:
+      - test
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - uses: actions/setup-java@v2
+        with:
+          distribution: temurin
+          java-version: 8
+          cache: maven
+
+      - name: Create release
+        uses: extenda/actions/conventional-release@v0
+        id: release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build release
+        uses: extenda/actions/maven@v0
+        with:
+          args: deploy -DskipTests
+          version: ${{ steps.release.outputs.version }}
+          service-account-key: ${{ secrets.SECRET_AUTH }}
