--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-health-check</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
       <groupId>org.redisson</groupId>
       <artifactId>redisson</artifactId>
     </dependency>
