feat: New redis configuration

--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,11 @@
   <dependencies>
     <dependency>
       <groupId>io.vertx</groupId>
+      <artifactId>vertx-codegen</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
       <artifactId>vertx-health-check</artifactId>
       <optional>true</optional>
     </dependency>
@@ -220,6 +225,11 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
+        <configuration>
+          <annotationProcessors>
+            <annotationProcessor>io.vertx.codegen.CodeGenProcessor</annotationProcessor>
+          </annotationProcessors>
+        </configuration>
       </plugin>
       <!-- Tests and code coverage -->
       <plugin>
