--- a/pom.xml
+++ b/pom.xml
@@ -212,6 +212,20 @@
       <artifactId>mockito-inline</artifactId>
       <version>3.8.0</version>
       <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>net.bytebuddy</groupId>
+          <artifactId>byte-buddy</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>net.java.dev.jna</groupId>
+          <artifactId>jna</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.objenesis</groupId>
+          <artifactId>objenesis</artifactId>
+        </exclusion>
+      </exclusions>
   </dependency>
     <dependency>
       <groupId>org.testcontainers</groupId>
