--- a/pom.xml
+++ b/pom.xml
@@ -82,9 +82,14 @@
       <dependency>
         <groupId>org.testcontainers</groupId>
         <artifactId>testcontainers-bom</artifactId>
-        <version>1.16.0</version>
+        <version>1.17.5</version>
         <type>pom</type>
         <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.google.code.findbugs</groupId>
+        <artifactId>jsr305</artifactId>
+        <version>3.0.2</version>
       </dependency>
       <dependency>
         <groupId>com.jayway.awaitility</groupId>
@@ -103,9 +108,14 @@
         <version>6.0.0</version>
       </dependency>
       <dependency>
+        <groupId>org.reactivestreams</groupId>
+        <artifactId>reactive-streams</artifactId>
+        <version>1.0.4</version>
+      </dependency>
+      <dependency>
         <groupId>org.redisson</groupId>
         <artifactId>redisson</artifactId>
-        <version>3.17.0</version>
+        <version>3.17.7</version>
       </dependency>
       <dependency>
         <groupId>org.slf4j</groupId>
