chore: Add source JARs

--- a/pom.xml
+++ b/pom.xml
@@ -241,6 +241,20 @@
           </annotationProcessors>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>3.2.1</version>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+            <phase>verify</phase>
+          </execution>
+        </executions>
+      </plugin>
       <!-- Tests and code coverage -->
       <plugin>
         <groupId>org.jacoco</groupId>
