fix: Remove stale subs on cluster join

--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,22 @@
         <version>4.4.16</version>
       </dependency>
       <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>4.9.0</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-core</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-junit-jupiter</artifactId>
+        <version>4.9.0</version>
+      </dependency>
+      <dependency>
         <!-- redisson vs awaitility -->
         <groupId>org.objenesis</groupId>
         <artifactId>objenesis</artifactId>
@@ -251,6 +267,11 @@
       <!-- JUnit 4 support -->
       <groupId>org.junit.vintage</groupId>
       <artifactId>junit-vintage-engine</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-junit-jupiter</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
