--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -5,14 +5,19 @@ jobs:
   pre-commit:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
+      - uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version-file: .java-version
+
       - name: Setup Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
 
       - name: Run pre-commit
-        uses: pre-commit/actions@v2.0.3
+        uses: pre-commit/actions@v3.0.0
         with:
           extra_args: --from-ref=${{ github.event.pull_request.base.sha }} --to-ref=${{ github.sha }}
