--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.retailsvc</groupId>
+  <groupId>com.github.wjw465150</groupId>
   <artifactId>vertx-redis-clustermanager</artifactId>
   <version>4.4.9</version>
 
