--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,19 +1,19 @@
-default_stages: [commit]
+default_stages: [pre-commit]
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v1.1.1
+    rev: v6.0.0
     hooks:
       - id: end-of-file-fixer
       - id: trailing-whitespace
   - repo: https://github.com/Lucas-C/pre-commit-hooks
-    rev: v1.1.4
+    rev: v1.5.5
     hooks:
       - id: remove-crlf
       - id: remove-tabs
         args: [ --whitespaces-count=2 ]
   - repo: https://github.com/extenda/pre-commit-hooks
-    rev: v0.9.0
+    rev: v0.14.0
     hooks:
       - id: google-java-formatter
       - id: commitlint
