build: Run sonar step on original repo

--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -22,7 +22,7 @@ jobs:
         run: ./mvnw verify
 
       - name: Scan with SonarCloud
-        if: ${{ secrets.SECRET_AUTH != '' }}
+        if: github.repository == 'extenda/vertx-redis-clustermanager'
         uses: extenda/actions/sonar-scanner@v0
         with:
           sonar-host: https://sonarcloud.io
