--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -4,6 +4,9 @@ on:
     branches: [ master ]
     types: [ opened, synchronize, reopened ]
 
+env:
+  MAVEN_INIT: 'false'
+
 jobs:
   test:
     runs-on: ubuntu-latest
